--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,8 +42,8 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 .status {
   display: inline-block;
   cursor: pointer;
-  width: 0.875rem;
-  height: 0.875rem;
+  width: .875rem;
+  height: .875rem;
   vertical-align: middle;
   border-radius: 50%;
 
